[package]
authors = ["AsherJingkongChen"]
categories = ["command-line-utilities", "development-tools::testing"]
default-run = "formula-example"
description = "Simple example binary for Homebrew formula testing"
documentation = "https://github.com/AsherJingkongChen/formula-example"
edition = "2021"
homepage = "https://github.com/AsherJingkongChen/formula-example"
keywords = ["binary", "cli", "example", "testing", "utility"]
license = "MIT"
name = "formula-example"
publish = true
readme = "README.md"
repository = "https://github.com/AsherJingkongChen/formula-example"
rust-version = "1.63"
version = "0.0.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
